--- a/skull.tmpl
+++ b/skull.tmpl
@@ -1,8 +1,8 @@
   {{? it.conflict }}
   <div>
-  конфликт: {{=it.conflict.user}}, {{=it.conflict.start}}-{{=it.conflict.end}}
+  РєРѕРЅС„Р»РёРєС‚: {{=it.conflict.user}}, {{=it.conflict.start}}-{{=it.conflict.end}}
 	{{? it.ia }}
-	<br><br><a class='button_sand red' onclick="dodialog('<p>Вы действительно хотите удалить запись?</p>','csend({view : \'week\', storage:1, id:{{=it.conflict.id}}, tstart:\'{{=it.conflict.start}}\', tend:\'{{=it.conflict.end}}\'})')">удалить конфликтующую запись</a>
+	<br><br><a class='button_sand red' onclick="dodialog('<p>Р’С‹ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С…РѕС‚РёС‚Рµ СѓРґР°Р»РёС‚СЊ Р·Р°РїРёСЃСЊ?</p>','csend({view : \'week\', storage:1, id:{{=it.conflict.id}}, tstart:\'{{=it.conflict.start}}\', tend:\'{{=it.conflict.end}}\'})')">СѓРґР°Р»РёС‚СЊ РєРѕРЅС„Р»РёРєС‚СѓСЋС‰СѓСЋ Р·Р°РїРёСЃСЊ</a>
     {{?}}  
   </div>
   {{?}}
